# smart-road

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bootstrap.sh
.agents/rules/: README.md
.agents/skills/: README.md
.agents/workflows/: implement-ticket.md  review-pr.md
.cursor/rules/: project-standards.mdc
assets/vehicles/: ATTRIBUTION.md
docs/: AGENT_WORKFLOW.md  PRD.md  SDS.md  audit.md  audit_findings.md  audit_plan.md  requirements.md  ticket-tracker.md
docs/pr-messages/: A01-project-scaffolding-pr.md  A02-quality-gates-pr.md  A03-intersection-render-pr.md  A04-arrow-spawn-pr.md  A05-spawn-anti-spam-pr.md  A06-random-spawn-pr.md  A07-turn-animation-pr.md  A08-custom-assets-pr.md  B01-vehicle-physics-pr.md  B02-route-adherence-pr.md  B02-route-adherence.md  B03-velocity-levels-pr.md  B04-safe-distance-pr.md  B05-acceleration-pr.md  B05-pr-body.md  C01-smart-detection-pr.md  C02-pr-body-update.md  C02-smart-scheduler-pr.md  C03-C04-pr.md  C05-stats-collector-pr.md  C06-pr-body.md  C06-stats-window-pr.md  C07-audit-dry-run-pr.md  C07-pr-body.md  C08-extra-stats-pr.md  C08-pr-body.md  pr-template.md
docs/raw/: audit-source.md  requirements-source.md
docs/reviews/: C03-C04-yield-congestion.md
examples/: README.md
reviews/: A03-intersection-render-review.md
scripts/: generate_road_assets.py  generate_vehicle_sprites.py  setup-sdl2-windows.ps1
src/: app.rs  config.rs  input.rs  intersection.rs  lib.rs  main.rs  render.rs  smart.rs  spawn.rs  stats.rs  stats_window.rs  vehicle.rs
tests/: manual_stats_window.rs  smoke.rs  stress_repro.rs
(+3 files in other folders)
